replacing javaflow